--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="row gx-0 align-items-center">
       <div class="col-lg-6 text-center text-lg-start mb-lg-0">
         <div class="d-flex">
-          <a href="emailto:LexWorkss@gmail.com" class="text-muted me-4"><i
+          <a href="mailto:lexworkss@gmail.com" class="text-muted me-4"><i
               class="fas fa-envelope text-secondary me-2"></i>lexworkss@gmail.com</a>
           <a href="tel:011-41540229" class="text-muted me-0"><i
               class="fas fa-phone-alt text-secondary me-2"></i>011-41540229</a>
@@ -335,8 +335,7 @@
             <div class="col-xl-7 wow fadeInRight" data-wow-delay="0.3s">
           <h5 class="sub-title pe-3">About Our Firm</h5>
           <h2 class="display-6 mb-4">
-            Charting The Course Of Justice Through Collaborative Spirit, Where
-            Legal Mastery Harmonizes With Compassionate Advocacy.
+            Charting The Course Of Justice Through Collaborative Spirit.
           </h2>
           <p class="mb-4">
             At Lex Works, we provide nationwide legal solutions, inspired by a
@@ -345,7 +344,7 @@
             prompt and effective outcomes. With a focus on ethics and client
             satisfaction, we are dedicated to guiding you through your legal
             journey...
-            <a class="btn btn-primary border-secondary rounded-pill" href="aboutus.html">Read More</a>
+            <a class="btn btn-primary border-secondary rounded-pill" href="aboutus.html" style="line-height: 12px;">Read More</a>
           </p>
           
         </div>
@@ -391,7 +390,7 @@
                   <div class="bg-primary text-center rounded p-3 mx-5 mb-4">
                     <a href="customs.html" class="h5 text-white mb-0">Customs</a>
                   </div>
-                  <a class="btn bg-secondary text-primary btn-sm rounded-pill py-2 px-3 mb-4" href="#">Read More</a>
+                  <a class="btn bg-secondary text-primary btn-sm rounded-pill py-2 px-3 mb-4" href="customs.html">Read More</a>
                 </div>
                 <div class="service-content pb-4">
                   <a href="customs.html">
@@ -403,7 +402,7 @@
                       navigating the complexities of customs law is crucial
                       for businesses engaged in international trade.
                     </p>
-                    <a class="btn btn-primary border-secondary rounded-pill py-3 px-5" href="#">Read More</a>
+                    <a class="btn btn-primary border-secondary rounded-pill py-3 px-5" href="customs.html">Read More</a>
                   </div>
                 </div>
               </div>
@@ -421,7 +420,7 @@
                   <div class="bg-primary text-center rounded p-3 mx-5 mb-4">
                     <a href="gst.html" class="h5 text-white mb-0">GST</a>
                   </div>
-                  <a class="btn bg-secondary text-primary btn-sm rounded-pill py-2 px-3 mb-4" href="#">Read More</a>
+                  <a class="btn bg-secondary text-primary btn-sm rounded-pill py-2 px-3 mb-4" href="gst.html">Read More</a>
                 </div>
                 <div class="service-content pb-4">
                   <a href="gst.html">
@@ -435,7 +434,7 @@
                       team offers a comprehensive suite of services designed
                       to navigate the complexities of Goods and Services Tax.
                     </p>
-                    <a class="btn btn-primary border-secondary rounded-pill text-white py-3 px-5" href="#">Read More</a>
+                    <a class="btn btn-primary border-secondary rounded-pill text-white py-3 px-5" href="gst.html">Read More</a>
                   </div>
                 </div>
               </div>
@@ -453,7 +452,7 @@
                   <div class="bg-primary text-center rounded p-3 mx-5 mb-4">
                     <a href="ed-pmla-fema.html" class="h5 text-white mb-0">ED/PMLA/FEMA</a>
                   </div>
-                  <a class="btn bg-secondary text-primary btn-sm rounded-pill py-2 px-3 mb-4" href="#">Read More</a>
+                  <a class="btn bg-secondary text-primary btn-sm rounded-pill py-2 px-3 mb-4" href="ed-pmla-fema.html">Read More</a>
                 </div>
                 <div class="service-content pb-4">
                   <a href="ed-pmla-fema.html">
@@ -466,7 +465,7 @@
                       providing robust legal support in matters involving
                       economic offenses
                     </p>
-                    <a class="btn btn-primary border-secondary rounded-pill text-white py-3 px-5" href="#">Read More</a>
+                    <a class="btn btn-primary border-secondary rounded-pill text-white py-3 px-5" href="ed-pmla-fema.html">Read More</a>
                   </div>
                 </div>
               </div>
@@ -484,7 +483,7 @@
                   <div class="bg-primary text-center rounded p-3 mx-5 mb-4">
                     <a href="ipr.html" class="h5 text-white mb-0">IPR</a>
                   </div>
-                  <a class="btn bg-secondary text-primary btn-sm rounded-pill py-2 px-3 mb-4" href="#">Read More</a>
+                  <a class="btn bg-secondary text-primary btn-sm rounded-pill py-2 px-3 mb-4" href="ipr.html">Read More</a>
                 </div>
                 <div class="service-content pb-4">
                   <a href="ipr.html">
@@ -497,7 +496,7 @@
                       protecting and enforcing the creative and innovative
                       assets of our clients.
                     </p>
-                    <a class="btn btn-primary border-secondary rounded-pill text-white py-3 px-5" href="#">Read More</a>
+                    <a class="btn btn-primary border-secondary rounded-pill text-white py-3 px-5" href="ipr.html">Read More</a>
                   </div>
                 </div>
               </div>
@@ -515,7 +514,7 @@
                   <div class="bg-primary text-center rounded p-3 mx-5 mb-4">
                     <a href="cyber-law.html" class="h5 text-white mb-0">Cyber Law</a>
                   </div>
-                  <a class="btn bg-secondary text-primary btn-sm rounded-pill py-2 px-3 mb-4" href="#">Read More</a>
+                  <a class="btn bg-secondary text-primary btn-sm rounded-pill py-2 px-3 mb-4" href="cyber-law.html">Read More</a>
                 </div>
                 <div class="service-content pb-4">
                   <a href="cyber-law.html">
@@ -528,7 +527,7 @@
                       challenges and opportunities presented by the digital
                       landscape.
                     </p>
-                    <a class="btn btn-primary border-secondary rounded-pill text-white py-3 px-5" href="#">Read More</a>
+                    <a class="btn btn-primary border-secondary rounded-pill text-white py-3 px-5" href="cyber-law.html">Read More</a>
                   </div>
                 </div>
               </div>
@@ -546,7 +545,7 @@
                   <div class="bg-primary text-center rounded p-3 mx-5 mb-4">
                     <a href="banking-and-finance.html" class="h5 text-white mb-0">Banking and Finance</a>
                   </div>
-                  <a class="btn bg-secondary text-primary btn-sm rounded-pill py-2 px-3 mb-4" href="#">Read More</a>
+                  <a class="btn bg-secondary text-primary btn-sm rounded-pill py-2 px-3 mb-4" href="banking-and-finance.html">Read More</a>
                 </div>
                 <div class="service-content pb-4">
                   <a href="banking-and-finance.html">
@@ -560,7 +559,7 @@
                       Law Practice is dedicated to providing comprehensive
                       legal support to financial institutions, corporations,
                     </p>
-                    <a class="btn btn-primary border-secondary rounded-pill text-white py-3 px-5" href="#">Read More</a>
+                    <a class="btn btn-primary border-secondary rounded-pill text-white py-3 px-5" href="banking-and-finance.html">Read More</a>
                   </div>
                 </div>
               </div>
@@ -578,7 +577,7 @@
                   <div class="bg-primary text-center rounded py-3 mx-5 mb-4">
                     <a href="criminal-and-civil-litigation.html" class="h5 text-white mb-0">Criminal and Civil Litigation</a>
                   </div>
-                  <a class="btn bg-secondary text-primary btn-sm rounded-pill py-2 px-3 mb-4" href="#">Read More</a>
+                  <a class="btn bg-secondary text-primary btn-sm rounded-pill py-2 px-3 mb-4" href="criminal-and-civil-litigation.html">Read More</a>
                 </div>
                 <div class="service-content pb-4">
                   <a href="criminal-and-civil-litigation.html">
@@ -592,7 +591,7 @@
                       Litigation Practice is committed to providing robust
                       legal representation in both criminal and civil matters.
                     </p>
-                    <a class="btn btn-primary border-secondary rounded-pill text-white py-3 px-5" href="#">Read More</a>
+                    <a class="btn btn-primary border-secondary rounded-pill text-white py-3 px-5" href="criminal-and-civil-litigation.html">Read More</a>
                   </div>
                 </div>
               </div>
@@ -610,7 +609,7 @@
                   <div class="bg-primary text-center rounded p-3 mx-5 mb-4">
                     <a href="arbitration.html" class="h5 text-white mb-0">Arbitration Practice</a>
                   </div>
-                  <a class="btn bg-secondary text-primary btn-sm rounded-pill py-2 px-3 mb-4" href="#">Read More</a>
+                  <a class="btn bg-secondary text-primary btn-sm rounded-pill py-2 px-3 mb-4" href="arbitration.html">Read More</a>
                 </div>
                 <div class="service-content pb-4">
                   <a href="arbitration.html">
@@ -623,7 +622,7 @@
                       disputes efficiently and effectively through
                       arbitration.
                     </p>
-                    <a class="btn btn-primary border-secondary rounded-pill text-white py-3 px-5" href="#">Read More</a>
+                    <a class="btn btn-primary border-secondary rounded-pill text-white py-3 px-5" href="arbitration.html">Read More</a>
                   </div>
                 </div>
               </div>
@@ -641,7 +640,7 @@
                   <div class="bg-primary text-center rounded p-3 mx-5 mb-4">
                     <a href="insolvency.html" class="h5 text-white mb-0">Insolvency Law</a>
                   </div>
-                  <a class="btn bg-secondary text-primary btn-sm rounded-pill py-2 px-3 mb-4" href="#">Read More</a>
+                  <a class="btn bg-secondary text-primary btn-sm rounded-pill py-2 px-3 mb-4" href="insolvency.html">Read More</a>
                 </div>
                 <div class="service-content pb-4">
                   <a href="insolvency.html">
@@ -653,7 +652,7 @@
                       provides expert guidance and representation in matters
                       of corporate and personal insolvency.
                     </p>
-                    <a class="btn btn-primary border-secondary rounded-pill text-white py-3 px-5" href="#">Read More</a>
+                    <a class="btn btn-primary border-secondary rounded-pill text-white py-3 px-5" href="insolvency.html">Read More</a>
                   </div>
                 </div>
               </div>
