--- a/ipr.html
+++ b/ipr.html
@@ -51,8 +51,8 @@
         <div class="row gx-0 align-items-center">
             <div class="col-lg-6 text-center text-lg-start mb-lg-0">
                 <div class="d-flex">
-                    <a href="emailto:LexWorkss@gmail.com" class="text-muted me-4"><i
-                            class="fas fa-envelope text-secondary me-2"></i>lexworkss@gmail.com</a>
+                    <a href="mailto:lexworkss@gmail.com" class="text-muted me-4"><i
+                        class="fas fa-envelope text-secondary me-2"></i>lexworkss@gmail.com</a>
                     <a href="tel:011-41540229" class="text-muted me-0"><i
                             class="fas fa-phone-alt text-secondary me-2"></i>011-41540229</a>
                 </div>
