--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
   <!-- About End -->
 
   <!-- Services Start -->
-  <div class="container-fluid service bg-light overflow-hidden pt-5">
+  <div class="container-fluid service bg-light overflow-hidden pt-5 watermarkBig">
     <div class="container py-5">
       <div class="section-title text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="sub-style">
@@ -665,7 +665,7 @@
   <!-- Services End -->
 
   <!-- Countries We Offer Start -->
-  <div class="container-fluid country overflow-hidden py-5">
+  <div class="container-fluid country overflow-hidden py-5 watermark">
     <div class="container">
       <div class="section-title text-center wow fadeInUp" data-wow-delay="0.1s" style="margin-bottom: 70px">
         <div class="sub-style">
@@ -741,7 +741,7 @@
   <!-- Countries We Offer End -->
 
   <!-- Training Start -->
-  <div class="container-fluid training overflow-hidden bg-light py-5">
+  <div class="container-fluid training overflow-hidden bg-light py-5 watermarkGray">
     <div class="container py-5">
       <div class="section-title text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="sub-style">
