udpate final changes

--- a/family-law.html
+++ b/family-law.html
@@ -195,7 +195,7 @@
                         <h4 class="text-secondary mb-4">Contact Info</h4>
                         <div class="alignContent">
                             <i class="fa fa-map-marker-alt me-2"></i>
-                            <span class="contentLine">C-131, 1st Floor Lajpat Nagar <br />New Delhi - 110024</span>
+                            <a href="https://maps.app.goo.gl/MP86TK5vVBeLUW4m6" target="_blank" class="contentLine hoverAnim">C-131, 1st Floor Lajpat Nagar New Delhi - 110024</a>
                         </div>
                         <div class="alignContent">
                             <i class="fas fa-envelope me-2"></i>
