--- a/real-state-law.html
+++ b/real-state-law.html
@@ -160,7 +160,7 @@
             <div class="row g-5">
                 <div class="col-xl-5 wow fadeInLeft" data-wow-delay="0.1s">
                     <div class="bg-light">
-                        <img src="img/realEstate.png" class="img-fluid rounded img-thumbnail w-100" alt="Direct TAX" />
+                        <img src="img/realEstate.png" class="img-fluid rounded img-thumbnail w-100" alt="Real Estate" />
                         <!-- <img src="img/about-3.jpg" class="img-fluid w-100 border-bottom border-5 border-primary" style="border-top-right-radius: 300px; border-top-left-radius: 300px;" alt="Image"> -->
                     </div>
                 </div>
