--- a/akhil-krishan-maggu.html
+++ b/akhil-krishan-maggu.html
@@ -143,11 +143,11 @@
     <!-- Header Start -->
     <div class="container-fluid bg-breadcrumb">
         <div class="container text-center py-5" style="max-width: 900px;">
-            <h3 class="text-white display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Our Team</h1>
+            <h3 class="text-white display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Akhil Krishan Maggu</h1>
                 <ol class="breadcrumb justify-content-center text-white mb-0 wow fadeInDown" data-wow-delay="0.3s">
                     <li class="breadcrumb-item"><a href="index.html" class="text-white">Home</a></li>
                     <li class="breadcrumb-item"><a href="#" class="text-white">Pages</a></li>
-                    <li class="breadcrumb-item active text-secondary">Our Team</li>
+                    <li class="breadcrumb-item active text-secondary">Akhil Krishnan Maggu</li>
                 </ol>
         </div>
     </div>
@@ -155,81 +155,40 @@
 
 
 
-    <!-- Countries We Offer Start -->
-    <div class="container-fluid country overflow-hidden py-5">
-        <div class="container">
-            <div class="section-title text-center wow fadeInUp" data-wow-delay="0.1s" style="margin-bottom: 70px">
-                <div class="sub-style">
-                    <h5 class="sub-title text-primary px-3">Our Team</h5>
-                </div>
-                <h1 class="display-5 mb-4">
-                    "A Collective Force for Justice." Meet Your Legal Team
-                </h1>
-                <!-- <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deleniti amet at atque
-                        sequi quibusdam cumque itaque repudiandae temporibus, eius nam mollitia voluptas maxime veniam
-                        necessitatibus saepe in ab? Repellat!</p> -->
-            </div>
-            <div class="row g-4 text-center">
-                <div class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="country-item">
-                        <div class="rounded overflow-hidden">
-                            <img src="img/akhil-krishnan-maggu.png" class="img-fluid w-100 rounded" alt="Image" />
-                        </div>
-                        <div class="country-flag">
-                            <img src="img/hammer.png" class="img-fluid rounded-circle" alt="Image" />
-                        </div>
-                        <div class="country-name">
-                            <a href="akhil-krishan-maggu.html" class="text-white fs-4">Adv. Akhil Krishan Maggu</a>
-                        </div>
+    <!-- About Start -->
+    <div class="container-fluid py-sm-0 py-5 watermark">
+        <div class="container py-5">
+            <div class="row g-5">
+                <div class="col-xl-5 wow fadeInLeft" data-wow-delay="0.1s">
+                    <div class="bg-light">
+                        <img src="img/akhil-krishnan-maggu.png" class="img-fluid rounded img-thumbnail w-100" alt="Direct TAX" />
+                        <!-- <img src="img/about-3.jpg" class="img-fluid w-100 border-bottom border-5 border-primary" style="border-top-right-radius: 300px; border-top-left-radius: 300px;" alt="Image"> -->
                     </div>
                 </div>
-                <div class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="country-item">
-                        <div class="rounded overflow-hidden">
-                            <img src="img/vikas-sareen.png" class="img-fluid w-100 rounded" alt="Image" />
-                        </div>
-                        <div class="country-flag">
-                            <img src="img/hammer.png" class="img-fluid rounded-circle" alt="Image" />
-                        </div>
-                        <div class="country-name">
-                            <a href="vikas-sareen.html" class="text-white fs-4">Vikas Sareen</a>
-                        </div>
-                    </div>
+                <div class="col-xl-7 wow fadeInRight" data-wow-delay="0.3s">
+
+                    <h5 class="sub-title mb-4 pe-3">Akhil Krishan Maggu</h5>
+
+                    <h4 class="customs-title"><em>Position:</em> Partner</h4>
+
+                    <h3 class="customs-heading mb-4">LL.M., London South Bank University, 2017</h3>
+
+                    <p><strong>Akhil Krishan Maggu</strong> is a dynamic Partner at Lex Works, with over a decade of diverse experience in business operations, financial restructuring, and legal compliance. As a dual-qualified professional with expertise in finance and law, Akhil brings a unique blend of strategic insight and practical execution to every challenge.</p>
+
+                    <p>Akhil's professional journey spans leadership roles across manufacturing, logistics, and international freight, where he has consistently driven operational efficiency and innovation. His deep understanding of financial restructuring, supply chain optimization, and regulatory compliance has made him a trusted advisor for businesses navigating complex legal and financial landscapes.</p>
+
+                    <p>Akhil believes in delivering tailored solutions that address client needs with precision and foresight. His ability to seamlessly integrate legal, financial, and operational expertise enables him to offer comprehensive guidance in today's complex business environment.</p>
+                        
+                    <p>Known for his innovative mindset, collaborative leadership, and unwavering dedication, Akhil Krishan Maggu is committed to advancing Lex Works's mission of empowering clients with effective legal and business strategies.</p>
+
+                    <p class="mb-4">Connect with <strong>Akhil today</strong> to explore how his expertise can support your legal and financial goals.</p>
+
                 </div>
-                <div class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="country-item">
-                        <div class="rounded overflow-hidden">
-                            <img src="img/ayush-mittal.png" class="img-fluid w-100 rounded" alt="Image" />
-                        </div>
-                        <div class="country-flag">
-                            <img src="img/hammer.png" class="img-fluid rounded-circle" alt="Image" />
-                        </div>
-                        <div class="country-name">
-                            <a href="ayush-mittal.html" class="text-white fs-4">AYUSH MITTAL</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp" data-wow-delay="0.7s">
-                    <div class="country-item">
-                        <div class="rounded overflow-hidden">
-                            <img src="img/maninder-kaur.png" class="img-fluid w-100 rounded" alt="Image" />
-                        </div>
-                        <div class="country-flag">
-                            <img src="img/hammer.png" class="img-fluid rounded-circle" alt="Image" />
-                        </div>
-                        <div class="country-name">
-                            <a href="maninder-kaur.html" class="text-white fs-4">Maninder Kaur</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- <div class="col-12">
-                    <a class="btn btn-primary border-secondary rounded-pill py-3 px-5 wow fadeInUp"
-                        data-wow-delay="0.1s" href="#">More Team</a>
-                </div> -->
             </div>
         </div>
     </div>
-    <!-- Countries We Offer End -->
+    <!-- About End -->
+
 
 
     <!-- Footer Start -->
