--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
                   <img src="img/hammer.png" class="img-fluid rounded-circle" alt="Image" />
               </div>
               <div class="country-name">
-                  <a href="akhil-krishnan-maggu.html" class="text-white fs-4">Adv. Akhil Krishan Maggu</a>
+                  <a href="akhil-krishan-maggu.html" class="text-white fs-4">Adv. Akhil Krishan Maggu</a>
               </div>
           </div>
       </div>
