--- a/ms-shivanjali.html
+++ b/ms-shivanjali.html
@@ -143,11 +143,11 @@
     <!-- Header Start -->
     <div class="container-fluid bg-breadcrumb">
         <div class="container text-center py-5" style="max-width: 900px;">
-            <h3 class="text-white display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Akhil Krishnan Maggu</h1>
+            <h3 class="text-white display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Ms. Shivanjali</h1>
                 <ol class="breadcrumb justify-content-center text-white mb-0 wow fadeInDown" data-wow-delay="0.3s">
                     <li class="breadcrumb-item"><a href="index.html" class="text-white">Home</a></li>
                     <li class="breadcrumb-item"><a href="#" class="text-white">Pages</a></li>
-                    <li class="breadcrumb-item active text-secondary">Akhil Krishnan Maggu</li>
+                    <li class="breadcrumb-item active text-secondary">Ms. Shivanjali</li>
                 </ol>
         </div>
     </div>
@@ -167,40 +167,17 @@
                 </div>
                 <div class="col-xl-7 wow fadeInRight" data-wow-delay="0.3s">
 
-                    <h5 class="sub-title mb-4 pe-3">Akhil Krishnan Maggu</h5>
+                    <h5 class="sub-title mb-4 pe-3">Ms. Shivanjali</h5>
 
-                    <h4 class="customs-title"><em>Position:</em> Partner</h4>
+                    <!-- <h4 class="customs-title"><em>Position:</em> Senior Associate</h4> -->
 
-                    <h3 class="customs-heading mb-4">Education: LL.B. (H), 2009</h3>
+                    <h3 class="customs-heading mb-4">Legal Tech Innovator & Documentation Specialist</h3>
 
-                    <p><strong>VIKAS SAREEN</strong> is a dedicated Partner at <strong>Lex Works</strong>, bringing over
-                        11 years of comprehensive experience in criminal and commercial litigation, dispute resolution,
-                        negotiation, and indirect tax matters, including customs, excise, and GST cases. A graduate of
-                        law with honors, he has developed a deep expertise that allows him to navigate complex legal
-                        landscapes with skill and confidence.</p>
+                    <p><strong>Ms. Shivanjali</strong>, the founder of Dastawezz, is a trailblazer in the legal technology sector, renowned for her innovative approach to simplifying legal documentation and providing accessible legal services. With a deep understanding of the complexities of legal processes, she has revolutionized the way individuals and businesses approach legal documentation through a user-centric platform that prioritizes efficiency and transparency.</p>
+                    
+                    <p>As a member of our expert panel, Ms. Shivanjali lends her invaluable expertise in legal documentation, compliance, and technology-driven solutions. Her forward-thinking mindset and dedication to excellence make her an integral part of our team, helping clients achieve their goals with seamless and reliable support.</p>
 
-                    <p>Throughout his career, <strong>VIKAS SAREEN</strong> has successfully represented clients in
-                        mediations, arbitrations, and settlement negotiations, appearing before various esteemed forums,
-                        including the Hon'ble Supreme Court of India and the Hon'ble Delhi High Court. He has handled
-                        significant cases under the Customs Act and COFEPOSA, as well as economic offenses, showcasing
-                        his ability to manage high-stakes situations effectively.</p>
-
-                    <p><strong>VIKAS SAREEN</strong> is particularly proficient in legal and real estate due diligence,
-                        joint ventures, leasing, and transactional negotiations related to property disputes. He
-                        believes in a strategic approach to litigation, advising clients on the best practices and
-                        procedures to follow, and has a proven track record of independently managing cases from trial
-                        through all levels of appeals.</p>
-
-                    <p>In addition to his legal expertise, <strong>VIKAS SAREEN</strong> has facilitated the management
-                        of diverse legal, regulatory, and compliance matters, ensuring that organizational goals are met
-                        while minimizing risks. Known for his innovative solutions and strong work ethic, he makes
-                        high-stakes decisions in fast-paced environments, always with integrity and professionalism. As
-                        a leader at <strong>Lex Works</strong>, he is dedicated to fostering a collaborative environment
-                        that prioritizes client success and the professional growth of team members.</p>
-
-                    <p class="mb-4"><strong>VIKAS SAREEN</strong> is excited to continue driving the firm's mission
-                        forward, leveraging his extensive experience to navigate the challenges of today's legal
-                        landscape.</p>
+                    <p class="mb-4">Explore the advantage of having Ms. Shivanjali and our expert panel guide you through your legal challenges with precision and professionalism.</p>
 
                 </div>
             </div>
