update for pics

--- a/ourteam.html
+++ b/ourteam.html
@@ -222,6 +222,32 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="country-item">
+                        <div class="rounded overflow-hidden">
+                            <img src="img/blank-men.png" class="img-fluid w-100 rounded" alt="Image" />
+                        </div>
+                        <div class="country-flag">
+                            <img src="img/hammer.png" class="img-fluid rounded-circle" alt="Image" />
+                        </div>
+                        <div class="country-name">
+                            <a href="ms-oshin-maggu.html" class="text-white fs-4">Ms. Oshin Maggu</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="country-item">
+                        <div class="rounded overflow-hidden">
+                            <img src="img/blank-men.png" class="img-fluid w-100 rounded" alt="Image" />
+                        </div>
+                        <div class="country-flag">
+                            <img src="img/hammer.png" class="img-fluid rounded-circle" alt="Image" />
+                        </div>
+                        <div class="country-name">
+                            <a href="ms-shivanjali.html" class="text-white fs-4">Ms. Shivanjali</a>
+                        </div>
+                    </div>
+                </div>
                 <!-- <div class="col-12">
                     <a class="btn btn-primary border-secondary rounded-pill py-3 px-5 wow fadeInUp"
                         data-wow-delay="0.1s" href="#">More Team</a>
